added other products

--- a/store/index.html
+++ b/store/index.html
@@ -47,16 +47,16 @@
         <div class="store-grid">
 
     
-          <a href="../store/mcr-002/" class="merch-link">
+          <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                <img src="../images/products/mcr-001/mcr-001.webp" alt="Various Artists - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-001/mcr-001-hover.webp" alt="Various Artists - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  <p class="merch-block-artist-name">VARIOUS ARTISTS</p>
+                  <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                 </div>
                 <div class="merch-block-price-container">
                   <div class="merch-block-price">$10</div>
@@ -65,7 +65,7 @@
             </div>
           </a>
 
-          <a href="../store/mcr-002/" class="merch-link">
+          <a href="mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
@@ -74,7 +74,7 @@
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
                   <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - CASSETTE</p>
                 </div>
                 <div class="merch-block-price-container">
                   <div class="merch-block-price">$10</div>
@@ -83,52 +83,16 @@
             </div>
           </a>
 
-          <a href="../store/mcr-002/" class="merch-link">
+          <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                <img src="../images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
                   <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="../store/mcr-002/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
-                </div>
-              </div>
-            </div>
-          </a>
-
-          <a href="../store/mcr-002/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                <img src="../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                  <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
                 </div>
                 <div class="merch-block-price-container">
                   <div class="merch-block-price">$10</div>
