--- a/store/mcr-002v/index.html
+++ b/store/mcr-002v/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Of Course I Will - Cryhard</title>
+    <title>Vinyl - Of Course I Will - Cryhard</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
@@ -44,7 +44,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../images/products/mcr-002/mcr-002-full.webp" alt="Cryhard - Of Course I Will Cassette">
+          <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -55,7 +55,7 @@
           <p class="release-date">Release Date: July 19, 2024</p>
           <hr class="separator">
           <div class="price-and-button">
-            <span class="product-price">$10</span>
+            <span class="product-price">$30</span>
             <div class="product-buy-button" data-product-id="7723835195446">
               <div id="product-add-to-cart"></div>
             </div>
@@ -112,19 +112,19 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../mcr-002v/" class="merch-link">
+            <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-                  <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
+                    <div class="merch-block-price">$10</div>
                   </div>
                 </div>
               </div>
