--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Of Course I Will - Cryhard</title>
+    <title>Cassette - Stetch Us Outta Here - Cryhard</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../shared-styles/global.css">
     <link rel="stylesheet" href="../../shared-styles/header.css">
     <link rel="stylesheet" href="../../shared-styles/footer.css">
-    <link rel="stylesheet" href="mcr-002.css">
+    <link rel="stylesheet" href="mcr-003.css">
   </head>
   
   <body>
@@ -44,15 +44,15 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../images/products/mcr-002/mcr-002-full.webp" alt="Cryhard - Of Course I Will Cassette">
+          <img src="../../images/products/mcr-003/mcr-003-full.webp" alt="Cryhard - Stretch Us Outta Here Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">OF COURSE I WILL</h1>
+          <h1 class="product-title">STRETCH US OUTTA HERE</h1>
           <div class="whitespace"></div>
           <h2 class="product-artist">Cryhard</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: July 19, 2024</p>
+          <p class="release-date">Release Date: TBD</p>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$10</span>
@@ -112,23 +112,6 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../mcr-002v/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-                  <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
-                  </div>
-                </div>
-              </div>
-            </a>
 
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
@@ -148,16 +131,16 @@
               </div>
             </a>
 
-            <a href="../mcr-003/" class="merch-link">
+            <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
-                  <img src="../../images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -166,6 +149,23 @@
               </div>
             </a>
 
+            <a href="../mcr-002v/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
+                </div>
+              </div>
+            </a>
 
           </div>
         </div>
