added pre order link to home

--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
     <div class="latest-release">
 
       <div class="side-quests-vol-1-hero">
-        <img src="images/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
+      <img src="images/side-quests-vol-1-hero.png" alt="Side Quests Vol. 1 Hero">
       </div>
 
       <div class="release-text">
-        <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
-        <div class="rainbow-underline"></div>
-        <p>
-          The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.
-        </p>
-        <p><strong>Limited to 50 copies.</strong></p>
-        <button class="pre-order">
-          <img src="images/pre-order-button.svg" alt="Pre-Order Button">
-        </button>
+      <h2 class="release-heading">LATEST RELEASE</h2>
+      <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
+      <div class="rainbow-underline"></div>
+      <p>
+        The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.
+      </p>
+      <p><strong>Limited to 50 copies.</strong></p>
+      <a href="store/mcr-001/" class="pre-order">
+        <img src="images/pre-order-button.svg" alt="Pre-Order Button">
+      </a>
       </div>
     </div>
 
