added vinyl to store

--- a/store/index.html
+++ b/store/index.html
@@ -83,6 +83,24 @@
             </div>
           </a>
 
+          <a href="mcr-002v/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$30</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
