all product pages started

--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../shared-styles/global.css">
     <link rel="stylesheet" href="../../shared-styles/header.css">
     <link rel="stylesheet" href="../../shared-styles/footer.css">
-    <link rel="stylesheet" href="mcr-003.css">
+    <link rel="stylesheet" href="../../shared-styles/product-page.css">
   </head>
   
   <body>
@@ -144,6 +144,24 @@
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../new-001/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
+                  <img src="../../images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Portable Cassette Player</p>
+                    <p class="merch-block-product-name">Transparent</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$25</div>
                   </div>
                 </div>
               </div>
