--- a/index.html
+++ b/index.html
@@ -150,6 +150,24 @@
           </div>
         </a>
 
+        <a href="store/new-001/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
+              <img src="images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">Portable Cassette Player</p>
+                <p class="merch-block-product-name">Transparent</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$25</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
 
       </div>
     </div>
