--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -208,8 +208,8 @@
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <a href="../../artists">ARTISTS</a>
           <a href="../../about">ABOUT</a>
+          <a href="../../cart">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
