--- a/artists/index.html
+++ b/artists/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Under Construction Redirect -->
+    <script>
+      window.location.href = "/under-construction.html";
+    </script>
+
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,9 +38,7 @@
         <a href="../about">ABOUT</a>
         <a href="" class="cart">CART</a>
       </nav>
-      <div class="rainbow-strip">
-        <img src="../images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
-      </div>
+      <div class="rainbow-strip"></div>
       <div class="hamburger-icon">
         <img src="../images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </div>
