finished product descriptions

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -78,10 +78,10 @@
           </div>
           <hr class="separator">
           <div class="pressing-info">
-            <h3>Pressing Info:</h3>
+            <h3>Product Info:</h3>
             <div class="whitespace"></div>
-            <p>First Pressing</p>
-            <p>Black Vinyl x100</p>
+            <p>First Edition Real-Time Dubbed</p>
+            <p>Transparent  Cassette x50</p>
             <p>MCR-002</p>
           </div>
         </div>
@@ -92,10 +92,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard is an indie/alternative band based out of Oklahoma City and consists of members Bailey Little, Patrick Hanscom, Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.<br><br>
+        Cryhard’s freshman album, Of Course I Will, has its first-ever tape run! Limited to just 100 copies, this release includes a Hi-Fi audio tape, a beautifully designed fold-out J-Slip, and a clear case. This album set the band on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
       </p>
     </section>
 
