--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -52,7 +52,7 @@
           <div class="whitespace"></div>
           <h2 class="product-artist">Cryhard</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: TBD</p>
+          <p class="release-date">Release Date: July 16, 2022</p>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$10</span>
@@ -65,24 +65,26 @@
             <h3>Track List</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Mind Flayer</li>
-              <li>Dementors</li>
-              <li>Fallout New Vegas</li>
-              <li>Nerf Case</li>
-              <li>Aftermath</li>
-              <li>Legends</li>
-              <li>Working Hard on the Fish Farm</li>
-              <li>Flying With a Gun</li>
-              <li>Low Riffer</li>
+              <li>Pioneer</li>
+              <li>A Xing</li>
+              <li>Hovercraft</li>
+              <li>Computer Games</li>
+              <li>Maximum Sunset</li>
+              <li>Ovrlrd of the Undrwrld</li>
+              <h3>Bonus Tracks</h3>
+              <div class="whitespace"></div>
+              <li>Summer Mourning</li>
+              <li>If You Want</li>
+              <li>Powder</li>
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
-            <h3>Pressing Info:</h3>
+            <h3>Product Info:</h3>
             <div class="whitespace"></div>
-            <p>First Pressing</p>
-            <p>Black Vinyl x100</p>
-            <p>MCR-002</p>
+            <p>First Edition Real-Time Dubbed</p>
+            <p>Transparent Orange Cassette x25</p>
+            <p>MCR-003</p>
           </div>
         </div>
       </div>
@@ -92,10 +94,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard is an indie/alternative band based out of Oklahoma City and consists of members Bailey Little, Patrick Hanscom, Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.<br><br>
-      </p>
-      <p>
-        Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+        The first-ever Cryhard EP, Stretch Us Outta Here, now has its first-edition cassette run! Limited to just 25 units, this cassette also features three bonus tracks written around the same time this project was being made. It includes a Hi-Fi, real-time audio cassette, J-Slip, case, Bandcamp digital download code, and a numbered card (1–25).
       </p>
     </section>
 
