--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -61,27 +61,22 @@
           </div>
           <hr class="separator">
           <div class="track-list">
-            <h3>Track List</h3>
+            <h3>How to Use</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Mind Flayer</li>
-              <li>Dementors</li>
-              <li>Fallout New Vegas</li>
-              <li>Nerf Case</li>
-              <li>Aftermath</li>
-              <li>Legends</li>
-              <li>Working Hard on the Fish Farm</li>
-              <li>Flying With a Gun</li>
-              <li>Low Riffer</li>
+              <li>Insert your favorite cassette tape.</li>
+              <li>Plug in wired headphones or connect to an aux cable.</li>
+              <li>Press play and enjoy high-quality analog sound.</li>
+              <li>Use the rewind and fast-forward buttons to navigate tracks.</li>
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
-            <h3>Pressing Info:</h3>
+            <h3>Product Specs:</h3>
             <div class="whitespace"></div>
-            <p>First Pressing</p>
-            <p>Black Vinyl x100</p>
-            <p>MCR-002</p>
+            <p>Transparent Plastic Portable Cassette Player</p>
+            <p>1/8-inch (3.5mm) Stereo Audio Output</p>
+            <p>Powered by AA Batteries</p>
           </div>
         </div>
       </div>
@@ -91,10 +86,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard is an indie/alternative band based out of Oklahoma City and consists of members Bailey Little, Patrick Hanscom, Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.<br><br>
+        We often hear that people want to start collecting cassette tapes but don’t have a device to play them on. Now, you can begin your collection and listen without breaking the bank!
+        <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+        These tape players feature a transparent plastic design with a 1/8-inch output for regular wired headphones or aux connections. Plus, they are compact and lightweight for easy transport
       </p>
     </section>
 
