--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -52,7 +52,7 @@
           <div class="whitespace"></div>
           <h2 class="product-artist">Various Artists</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: TBD</p>
+          <p class="release-date">Release Date: February 21, 2025</p>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$10</span>
@@ -65,24 +65,24 @@
             <h3>Track List</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Mind Flayer</li>
-              <li>Dementors</li>
-              <li>Fallout New Vegas</li>
-              <li>Nerf Case</li>
-              <li>Aftermath</li>
-              <li>Legends</li>
-              <li>Working Hard on the Fish Farm</li>
-              <li>Flying With a Gun</li>
-              <li>Low Riffer</li>
+              <li>Sorcerer’s Tome - Cryhard</li>
+              <li>benchmark - Kitchen Slug</li>
+              <li>Cursed - Idiot Mile</li>
+              <li>Flawed me - Always Last</li>
+              <li>Unwilted Stutter - Hobbyist.</li>
+              <li>Love Potions - Sweetest Pot</li>
+              <li>Tied up - Settling…</li>
+              <li>late at night - acid baptism</li>
+              <li>Noytama / Nola - Toad Socks</li>
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
-            <h3>Pressing Info:</h3>
+            <h3>Product Info:</h3>
             <div class="whitespace"></div>
-            <p>First Pressing</p>
-            <p>Black Vinyl x100</p>
-            <p>MCR-002</p>
+            <p>First Edition Real-Time Dubbed</p>
+            <p>Transparent Maroon Cassette x25</p>
+            <p>MCR-001</p>
           </div>
         </div>
       </div>
@@ -92,10 +92,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard is an indie/alternative band based out of Oklahoma City and consists of members Bailey Little, Patrick Hanscom, Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.<br><br>
+        The first-ever volume of Mystery Class’s very own series, Side Quests, is here! This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
+        <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+        With songs from Cryhard, Kitchen Slug, Idiot Mile, Always Last, Sweetest Pot, acid baptism, settling..., Toad Socks, and Hobbyist, there’s something for everyone to enjoy. Pick up your very own numbered and limited-edition copy of this first-ever MCR release. Limited to 50 copies.
       </p>
     </section>
 
