--- a/store/mcr-002v/index.html
+++ b/store/mcr-002v/index.html
@@ -82,7 +82,7 @@
             <div class="whitespace"></div>
             <p>First Pressing</p>
             <p>Black Vinyl x100</p>
-            <p>MCR-002</p>
+            <p>MCR-002V</p>
           </div>
         </div>
       </div>
@@ -92,10 +92,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard is an indie/alternative band based out of Oklahoma City and consists of members Bailey Little, Patrick Hanscom, Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard is a project in which everyone fills different roles depending on the track. This project has been in the works since 2018 and has had assistance from several good friends along the way.<br><br>
+        Cryhard’s freshman album, Of Course I Will, now has its first-ever vinyl run! Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        <br><br>
       </p>
       <p>
-        Of Course I Will is the band's first full-length LP that reflects on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+        Of Course I Will is the band's first full-length LP, reflecting on themes of growing up, anxiety, and love. Recorded in Bailey’s spare bedroom, the album embraces its DIY roots with a warm, lo-fi sound.
       </p>
     </section>
 
