updated related merch margins

--- a/store/mcr-002v/index.html
+++ b/store/mcr-002v/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Under Construction Redirect -->
+    <script>
+      window.location.href = "/under-construction.html";
+    </script>
+
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,8 +62,10 @@
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$30</span>
-            <div class="product-buy-button" data-product-id="7723835195446">
-              <div id="product-add-to-cart"></div>
+            <div class="product-buy-button">
+              
+              
+
             </div>
           </div>
           <hr class="separator">
