--- a/under-construction.html
+++ b/under-construction.html
@@ -10,3 +10,9 @@
     <p>Check back later!</p>
 </body>
 </html>
+
+
+<!-- Under Construction Redirect -->
+<!-- <script>
+    window.location.href = "/under-construction.html";
+  </script> -->
