--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </div>
         </a>
 
-        <a href="store/mcr-002v/" class="merch-link">
+        <!-- <a href="store/mcr-002v/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
@@ -130,7 +130,7 @@
               </div>
             </div>
           </div>
-        </a>
+        </a> -->
 
         <a href="store/mcr-003/" class="merch-link">
           <div class="merch-block">
