--- a/store/index.html
+++ b/store/index.html
@@ -83,7 +83,7 @@
             </div>
           </a>
 
-          <a href="mcr-002v/" class="merch-link">
+          <!-- <a href="mcr-002v/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
                 <img src="../images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
@@ -99,7 +99,7 @@
                 </div>
               </div>
             </div>
-          </a>
+          </a> -->
 
           <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
