product info fix

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -407,7 +407,7 @@
           <div class="pressing-info">
             <h3>Product Info:</h3>
             <div class="whitespace"></div>
-            <p>First Edition Real-Time Dubbed</p>
+            <p>First Edition Hi-Fi Duplication</p>
             <p>Transparent  Cassette x50</p>
             <p>MCR-002</p>
           </div>
