--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="shared-styles/global.css">
     <link rel="stylesheet" href="shared-styles/header.css">
     <link rel="stylesheet" href="shared-styles/footer.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="home.css"> 
+     
   </head>
 
   <body>      
@@ -218,5 +219,6 @@
     <!-- Scripts -->
     <script src="scripts/MobileHeaderExpand.js"></script>
     <script src="scripts/MerchBlockScrollSwap.js"></script>
+    <script src="scripts/ShopifyCart.js"></script>
   </body>
 </html>
