header cart toggle prototype finished

--- a/cart/index.html
+++ b/cart/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Scripts-->
-    <script src="https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js"></script>
+    
 
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
@@ -89,7 +89,7 @@
 
     <!-- Scripts -->
     <script src="../scripts/MobileHeaderExpand.js"></script>
-    <script src="../scripts/HeaderCartButton.js"></script>
+    <script src="../scripts/CartDrawer.js"></script>
     
   </body>
 </html>
