--- a/cart/index.html
+++ b/cart/index.html
@@ -88,7 +88,7 @@
 
     <!-- Scripts -->
     <script src="../scripts/MobileHeaderExpand.js"></script>
-    <script src="../scripts/CartDrawer.js"></script>
+    <script src="../scripts/CartToggle.js"></script>
     
   </body>
 </html>
