--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       <nav class="nav">
         <a href="store">STORE</a>
         <a href="about">ABOUT</a>
-        <a href="cart" class="cart">CART</a>
+        <div class="cart-container">
+          <div id="cart-button"></div>
+        </div>
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
@@ -188,7 +190,6 @@
         <nav class="footer-nav">
           <a href="store">STORE</a>
           <a href="about">ABOUT</a>
-          <a href="">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
@@ -220,7 +221,7 @@
     <!-- Scripts -->
     <script src="scripts/MobileHeaderExpand.js"></script>
     <script src="scripts/MerchBlockScrollSwap.js"></script>
-    <script src="scripts/CartDrawer.js"></script>  
+    <script src="scripts/CartToggle.js"></script>  
 
   </body>
 </html>
