--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,9 @@
       <nav class="nav">
         <a href="../store">STORE</a>
         <a href="../about">ABOUT</a>
-        <a href="" class="cart">CART</a>
+        <div class="cart-container">
+          <div id="cart-button"></div>
+        </div>
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
@@ -76,7 +78,6 @@
         <nav class="footer-nav">
           <a href="../store">STORE</a>
           <a href="../about">ABOUT</a>
-          <a href="">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
@@ -107,6 +108,7 @@
 
     <!-- Scripts -->
     <script src="../scripts/MobileHeaderExpand.js"></script>
+    <script src="../scripts/CartToggle.js"></script>
     
   </body>
 </html>
