--- a/store/index.html
+++ b/store/index.html
@@ -29,7 +29,9 @@
       <nav class="nav">
         <a href="../store">STORE</a>
         <a href="../about">ABOUT</a>
-        <a href="../cart-page" class="cart">CART</a>
+        <div class="cart-container">
+          <div id="cart-button"></div>
+        </div>
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
@@ -156,7 +158,6 @@
         <nav class="footer-nav">
           <a href="../store">STORE</a>
             <a href="../about">ABOUT</a>
-            <a href="">CART</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
@@ -187,6 +188,7 @@
 
       <!-- Scripts -->
       <script src="../scripts/MobileHeaderExpand.js"></script>
+      <script src="../scripts/CartToggle.js"></script>
       <script src="../scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
