--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">Side Quests Vol. 1</h1>
+          <h1 class="product-title">Side Quests Vol. 1<br>(pre-order)</h1>
           <div class="whitespace"></div>
           <h2 class="product-artist">Various Artists</h2>
           <div class="whitespace"></div>
