--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -29,7 +29,9 @@
     <nav class="nav">
       <a href="../../store">STORE</a>
       <a href="../../about">ABOUT</a>
-      <a href="" class="cart">CART</a>
+      <div class="cart-container">
+        <div id="cart-button"></div>
+      </div>
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
