finished all cart functionalities

--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -567,9 +567,10 @@
       </div>
     </footer>
 
-    <!-- Import Scripts -->
+    <!-- Scripts -->
     <script src="../../scripts/AddToCart.js"></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
+    <script src="../../scripts/CartToggle.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
     <script src="../../scripts/MerchBlockScrollSwap.js"></script>
 
