--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -570,6 +570,7 @@
     <!-- Import Scripts -->
     <script src="../../scripts/AddToCart.js"></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
+    <script src="../../scripts/CartToggle.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
     <script src="../../scripts/MerchBlockScrollSwap.js"></script>
 
