--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -570,9 +570,8 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../../scripts/AddToCart.js"></script>
+    <script src="../../scripts/CartToggle.js" async></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
-    <script src="../../scripts/CartToggle.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
     <script src="../../scripts/MerchBlockScrollSwap.js"></script>
 
