--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="scripts/CartToggle.js" async></script>
     <script src="scripts/MobileHeaderExpand.js"></script>
-    <script src="scripts/CartToggle.js"></script>
     <script src="scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
