--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -570,7 +570,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../../scripts/CartToggle.js" async></script>
+    <script src="../../scripts/CartToggleHeader.js" async></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
     <script src="../../scripts/MerchBlockScrollSwap.js"></script>
