--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -564,7 +564,7 @@
     </footer>
 
     <!-- Import Scripts -->
-    <script src="../../scripts/CartToggle.js" async></script>
+    <script src="../../scripts/CartToggleHeader.js" async></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
     <script src="../../scripts/MerchBlockScrollSwap.js"></script>
