--- a/about/index.html
+++ b/about/index.html
@@ -108,7 +108,7 @@
 
     <!-- Scripts -->
     <script src="../scripts/MobileHeaderExpand.js"></script>
-    <script src="../scripts/CartToggle.js"></script>
+    <script src="../scripts/CartToggleHeader.js"></script>
     
   </body>
 </html>
