--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/CartToggle.js" async></script>
+    <script src="scripts/CartToggleHeader.js"></script>
     <script src="scripts/MobileHeaderExpand.js"></script>
     <script src="scripts/MerchBlockScrollSwap.js"></script>
 
