--- a/store/index.html
+++ b/store/index.html
@@ -187,7 +187,7 @@
     </footer>
 
       <!-- Scripts -->
-      <script src="../scripts/CartToggle.js" async></script>
+      <script src="../scripts/CartToggleHeader.js" async></script>
       <script src="../scripts/MobileHeaderExpand.js"></script>
       <script src="../scripts/MerchBlockScrollSwap.js"></script>
 
