--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -317,32 +317,17 @@
                   ]
                 },
                 "toggle": {
-                  "styles": {
-                    "toggle": {
-                      "font-family": "Raleway, sans-serif",
-                      "font-weight": "bold",
-                      "background-color": "#0b1215",
-                      ":hover": {
-                        "background-color": "#131f24"
-                      },
-                      ":focus": {
-                        "background-color": "#131f24"
-                      }
-                    },
-                    "count": {
-                      "font-size": "18px",
-                      "color": "#f3f4f6",
-                      ":hover": {
-                        "color": "#f3f4f6"
-                      }
-                    },
-                    "iconPath": {
-                      "fill": "#f3f4f6"
-                    }
+                  'iframe': false,
+                  'sticky': false,
+                  'node': "document.getElementById('cart-button')",
+                  'contents': {
+                      'count': true,
+                      'icon': false,
+                      'title': true,
                   },
-                  "googleFonts": [
-                    "Raleway"
-                  ]
+                  'text': {
+                      'title': 'CART'
+                  }
                 },
                 "lineItem": {
                   "styles": {
