--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -29,9 +29,9 @@
     <nav class="nav">
       <a href="../../store">STORE</a>
       <a href="../../about">ABOUT</a>
-      <div class="cart-container">
+      <!-- <div class="cart-container">
         <div id="cart-button"></div>
-      </div>
+      </div> -->
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
@@ -568,7 +568,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../../scripts/CartToggleHeader.js" async></script>
     <script src="../../scripts/MobileHeaderExpand.js"></script>
     <script src="../../scripts/ProductZoom.js"></script>
     <script src="../../scripts/MerchBlockScrollSwap.js"></script>
