--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <nav class="nav">
         <a href="store">STORE</a>
         <a href="about">ABOUT</a>
-        <div class="cart-container">
+        <!-- <div class="cart-container">
           <div id="cart-button"></div>
-        </div>
+        </div> -->
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
@@ -218,7 +218,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="scripts/CartToggleHeader.js"></script>
+    <script src="scripts/CartToggleSticky.js" async></script>
     <script src="scripts/MobileHeaderExpand.js"></script>
     <script src="scripts/MerchBlockScrollSwap.js"></script>
 
